--- a/my_exp.html
+++ b/my_exp.html
@@ -23,11 +23,11 @@
 			<form id="create-exp">
 				<div class="grid">
 					<label for="name">Name</label>
-					<input type="text" name="username" value="" class="input-exp col-s-11 col-t-11 col-11" id="form-name">
+					<input type="text" name="name" value="" class="input-exp col-s-11 col-t-11 col-11" id="form-name">
 					<label for="Description">Description</label>
-					<input type="text" name="email" value="" class="input-exp col-s-11 col-t-11 col-11" id="form-description">
+					<input type="text" name="description" value="" class="input-exp col-s-11 col-t-11 col-11" id="form-description">
 					<label for="location">Location</label>
-					<input type="text" name="birth" class="input-exp col-s-11 col-t-11 col-11" id="form-location">
+					<input type="text" name="location" class="input-exp col-s-11 col-t-11 col-11" id="form-location">
 				</div>
 				<div id="input-smaller">
 					<div class="sub-in col-s-9 col-t-9 col-9" id="in-1-1">
@@ -35,8 +35,8 @@
 						<input type="number" name="budget" value="" class="input-exp col-s-6 col-t-6 col-6" id="form-budget">
 					</div>
 					<div class="sub-in col-s-9 col-t-9 col-9" id="in-2-2">
-						<label for="inter" class="label-int">Interest 1</label>
-						<select name="inter" id="new-interest-1" class="col-s-7 col-t-7 col-7">
+						<label for="inter1" class="label-int">Interest 1</label>
+						<select name="inter1" id="new-interest-1" class="col-s-7 col-t-7 col-7">
 							<option selected disabled hidden></option>
 							<option value="beach">Beach</option>
 							<option value="exotic">Exotic</option>
@@ -52,8 +52,8 @@
 						</select>
 					</div>
 					<div class="sub-in col-s-9 col-t-9 col-9" id="in-3-3">
-						<label for="inter" class="label-int">Interest 2</label>
-						<select name="inter" id="new-interest-2" class="col-s-7 col-t-7 col-7">
+						<label for="inter2" class="label-int">Interest 2</label>
+						<select name="inter2" id="new-interest-2" class="col-s-7 col-t-7 col-7">
 							<option selected disabled hidden></option>
 							<option value="beach">Beach</option>
 							<option value="exotic">Exotic</option>
@@ -70,7 +70,7 @@
 					</div>
 				</div>
 				<label for="image" class="custom-file-upload col-s-10 col-t-10 col-10" id="input-label">
-					<input type="file" class="hidden" name="image"/>
+					<input id="image-input-exp" type="file" class="hidden" name="image"/>
 				  <p class="col-s-7 col-t-7 col-7">Select Image</p>
 				</label>
 				<button type="submit" name="modify-prof" id="submit-mod" class="submit-but col-s-3 col-t-3 col-3">Submit</button>
@@ -101,7 +101,7 @@
 		</div>
 		<p class="question">Are you sure you want to delete this experience?</p>
 		<form class="yes-no col-s-11 col-t-11 col-11">
-			<button type="button" name="no-exp" id="no-but" class="submit-but col-s-3 col-t-3 col-3">No</button>
+			<button type="button" name="no-exp" id="no-but-exp" class="submit-but col-s-3 col-t-3 col-3">No</button>
 			<button type="submit" name="yes-exp" id="yes-exp" class="submit-but col-s-3 col-t-3 col-3">Yes</button>
 		</form>
 	</article>
@@ -113,7 +113,7 @@
 		</div>
 		<p class="question">Are you sure you want to delete this collection?</p>
 		<form class="yes-no col-s-11 col-t-11 col-11">
-			<button type="button" name="no-coll" id="no-but" class="submit-but col-s-3 col-t-3 col-3">No</button>
+			<button type="button" name="no-coll" id="no-but-coll" class="submit-but col-s-3 col-t-3 col-3">No</button>
 			<button type="submit" name="yes-coll" id="yes-col" class="submit-but col-s-3 col-t-3 col-3">Yes</button>
 		</form>
 	</article>
@@ -245,6 +245,54 @@
 			</div>
 		</article>
 	</div>
+
+	<!-- ---------- MESSAGES -------- -->
+
+	<article class="popup col-s-11" id="messages-popup">
+		<div class="title-exit">
+			<h3>Messaging</h3>
+			<button type="button" name="exit" class="exit-button">x</button>
+		</div>
+		<div id="inside-messages">
+			<div id="your-chats" class="col-s-11 col-t-11 col-3">
+	      <h3>Your chats</h3>
+	      <div id="chats" class="">
+	        <article class="chat-person" id="default-person">
+	          <p class="date-chat" id="date-chat">Default date</p>
+	          <img class="profile-img-chat" src="images/default_pfp.png" alt="default picture">
+	          <h4 class="name-chat" id="name-chat">Defaul name</h4>
+	        </article>
+	        <article class="chat-person" id="selected-chat">
+	          <p class="date-chat" id="date-chat">Default date</p>
+	          <img class="profile-img-chat" src="images/default_pfp.png" alt="default picture">
+	          <h4 class="name-chat" id="name-chat">Defaul name</h4>
+	        </article>
+	      </div>
+	    </div>
+	    <div id="chat" class="col-s-11 col-t-11 col-8">
+	      <div id="title-chat">
+	        <h3 id="main-chat">Default name</h3>
+	        <img id="profile-chat" src="images/default_pfp.png" alt="default picture">
+	      </div>
+	      <hr id="horizontal">
+	      <div id="in-messages">
+	        <div class="received-message message col-s-8 col-t-8 col-6" id="default-received">
+	          <p class="message-date-small" id="message-date">Default date</p>
+	          <p class="message-text">Default Message</p>
+	        </div>
+	        <div class="sent-message message col-s-8 col-t-8 col-6" id="default-sent">
+	          <p class="message-date-small" id="message-date">Default date</p>
+	          <p class="message-text">Default Message</p>
+	        </div>
+	      </div>
+	      <div class="col-s-9 comment-frm">
+	        <input type="text" class='comment-input col-s-10 col-t-11 col-11' name="message">
+	        <img class="send-btn" src="images/send.png" alt="send message">
+	      </div>
+	    </div>
+		</div>
+	</article>
+
 	<!-- ---------- END POP UPS----------- -->
 	<section>
 		<div id="section">
@@ -258,22 +306,46 @@
 					</div>
 					<div class="experience-col">
 						<div class="img-remove">
-							<img src="images/cies_pic_5.png" alt="" class="img-title">
+							<img src="images/prague_pic_1.png" alt="" class="img-title">
 							<div class="remove-select">
-								<button type="button" name="remove-experience" class="remove-exp" id="remove">x</button>
+								<button type="button" name="remove-experience" class="remove-exp" id="remove" onclick="delete_exp()">x</button>
 								<label class="b-contain">
-									<input type="checkbox">
+									<input type="checkbox" onclick="showAddColl(this)">
 									<div class="b-input"></div>
 								</label>
 							</div>
 						</div>
-						<h3 class="title-exp" id="default-tit">Default title</h3>
+						<h3 class="title-exp" id="default-tit">Prague at night</h3>
 						<article class="interests-exp">
-							<div class="interest" id="interest1">
-								<p>Interest 1</p>
+							<div class="interest" id="interest-11">
+								<p id="inter-1">Europe</p>
 							</div>
-							<div class="interest" id="interest2">
-								<p>Interest 2</p>
+							<div class="interest" id="interest-12">
+								<p id="inter-2">City</p>
+							</div>
+						</article>
+						<button type="button" name="comments-experience" class="big-button small" id="comments">See comments</button>
+					</div>
+				</article>
+				<article class="general-exp" id="default-experience-1">
+					<div class="experience-col">
+						<div class="img-remove">
+							<img src="images/bali_pic_2.png" alt="" class="img-title">
+							<div class="remove-select">
+								<button type="button" name="remove-experience" class="remove-exp" id="remove" onclick="delete_exp()">x</button>
+								<label class="b-contain">
+									<input type="checkbox" onclick="showAddColl(this)">
+									<div class="b-input"></div>
+								</label>
+							</div>
+						</div>
+						<h3 class="title-exp" id="default-tit">Bike path - Bali</h3>
+						<article class="interests-exp">
+							<div class="interest" id="interest-11">
+								<p id="inter-1">Forest</p>
+							</div>
+							<div class="interest" id="interest-12">
+								<p id="inter-2">Asia</p>
 							</div>
 						</article>
 						<button type="button" name="comments-experience" class="big-button small" id="comments">See comments</button>
@@ -292,7 +364,7 @@
 						<img src="images/cies_pic_5.png" alt="" class="center-img">
 						<img src="images/cies_pic_5.png" alt="" class="side-img-2">
 						<div class="remove-select">
-							<button type="button" name="remove-collection" class="remove" id="remove-coll">x</button>
+							<button type="button" name="remove-collection" class="remove" id="remove-coll" onclick="delete_coll()">x</button>
 						</div>
 					</div>
 					<h3 class="title-exp" id="default-tit">Default title</h3>
