--- a/profile.html
+++ b/profile.html
@@ -94,14 +94,14 @@
 				<input type="password" name="password" value="" class="input-sign col-s-8" id="password-confirm" pattern="[a-z0-9]{0,8}" required>
 			</div>
 			<div id="right" class="col-s-3">
-				<img src="images/default_pfp.png" alt="current picture" class="col-s-6">
+				<img src="images/default_pfp.png" alt="current picture" class="col-s-8">
 				<input type="file" id="hidden" class="input-sign" name="change picture">
 				<label for="hidden" id="input-label">Select picture</label>
 				<label for="interest">Interests</label>
 				<form class="profile-info">
 					<div class="col-s-9 col-t-9 col-9">
 						<label for="inter1" class="label-int">Interest 1</label>
-						<select name="inter1" id="interest-1" class="col-s-7 col-t-7 col-7">
+						<select name="inter1" id="interest-1" class="col-s-12">
 							<option selected disabled hidden></option>
 							<option value="beach">Beach</option>
 							<option value="exotic">Exotic</option>
@@ -118,7 +118,7 @@
 					</div>
 					<div class="col-s-9 col-t-9 col-9">
 						<label for="inter2" class="label-int">Interest 2</label>
-						<select name="inter2" id="interest-2" class="col-s-7 col-t-7 col-7">
+						<select name="inter2" id="interest-2" class="col-s-12">
 							<option selected disabled hidden></option>
 							<option value="beach">Beach</option>
 							<option value="exotic">Exotic</option>
@@ -135,7 +135,7 @@
 					</div>
 					<div class="col-s-9 col-t-9 col-9">
 						<label for="inter3" class="label-int">Interest 3</label>
-						<select name="inter3" id="interest-3" class="col-s-7 col-t-7 col-7">
+						<select name="inter3" id="interest-3" class="col-s-12">
 							<option selected disabled hidden></option>
 							<option value="beach">Beach</option>
 							<option value="exotic">Exotic</option>
@@ -152,7 +152,7 @@
 					</div>
 					<div class="col-s-9 col-t-9 col-9">
 						<label for="inter4" class="label-int">Interest 4</label>
-						<select name="inter4" id="interest-4" class="col-s-7 col-t-7 col-7">
+						<select name="inter4" id="interest-4" class="col-s-12">
 							<option selected disabled hidden></option>
 							<option value="beach">Beach</option>
 							<option value="exotic">Exotic</option>
@@ -169,7 +169,7 @@
 					</div>
 					<div class="col-s-9 col-t-9 col-9">
 						<label for="inter5" class="label-int">Interest 5</label>
-						<select name="inter5" id="interest-5" class="col-s-7 col-t-7 col-7">
+						<select name="inter5" id="interest-5" class="col-s-12">
 							<option selected disabled hidden></option>
 							<option value="beach">Beach</option>
 							<option value="exotic">Exotic</option>
