--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 					<label for="birth">New Birth Date</label>
 					<input type="date" name="birth" class="input-sign col-s-8" id="birth">
 					<label for="password">Password</label>
-					<input type="password" name="password" value="" class="input-sign col-s-8" id="password" pattern="[a-z0-9]{0,8}" required>
+					<input type="password" name="password" value="" class="input-sign col-s-8" id="password" pattern="[A-Za-z0-9]{4,8}" required>
 					<label for="password-confirm">Confirm Password</label>
-					<input type="password" name="password" value="" class="input-sign col-s-8" id="password-confirm" pattern="[a-z0-9]{0,8}" required>
+					<input type="password" name="password" value="" class="input-sign col-s-8" id="password-confirm" pattern="[A-Za-z0-9]{4,8}" required>
 				</div>
 				<div id="right" class="col-s-3">
 					<img src="images/default_pfp.png" alt="current picture" class="col-s-8">
